--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Talha Ekrem",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "mongoose": "^8.15.2",
