--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^6.0.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "express-session": "^1.18.2",
     "mongoose": "^8.15.2",
     "slugify": "^1.6.6"
   },
