--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "express-validator": "^7.3.1",
     "mongoose": "^8.15.2",
     "nodemailer": "^7.0.12",
     "slugify": "^1.6.6"
