--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "express-validator": "^7.3.1",
+    "method-override": "^3.0.0",
     "mongoose": "^8.15.2",
     "nodemailer": "^7.0.12",
     "slugify": "^1.6.6"
