--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Smart Education Portal. Patikadev nodejs kursu projesi 12.06.2025",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "node app.js"
   },
   "keywords": [
     "education",
